Modified Quote: Edited the Quote to inspire others

--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
        <div class = "three">
          <div class="quote-text">
           <p class ="quote">
-           <em> This is an inspiring quote, or a testimonial from a customer. May be it's just fliing up space, or may be people will actually read it.
-             Who knows? All I know is that it looks nice.</em>
+           <em> The Vision Without Execution IS Hallucination. Silly Potatoes Learn Atleast From A Compiler's Of Your Computer.</em>
           </p>
-          <p class="name"> -Thor , God Of Thunder</p>
+          <p class="name"> -By Tas.. ,Miss Thoughtful </p>
          </div>
        </div>
 
